<resources>
    <string name="app_name">Github Client</string>

    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>

    <string name="login_auth">Авторизация</string>
    <string name="login_label_user">Пользователь:</string>
    <string name="login_user">введите логин</string>
    <string name="login_label_pass">Пароль:</string>
    <string name="login_pass">введите пароль</string>
    <string name="login_btn">Войти</string>

    <string name="info_id">ID:</string>
    <string name="info_title">NAME:</string>
    <string name="info_forks">FORKS:</string>
    Пользователь:
</resources>