<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/login_auth"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        android:text="@string/login_label_user"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_user"
        android:layout_toRightOf="@+id/label_user"
        android:hint="@string/login_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_user"
        app:layout_constraintTop_toTopOf="@+id/label_user">
    </EditText>

    <TextView
        android:id="@+id/label_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_user"
        android:layout_alignLeft="@+id/label_user"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:text="@string/login_label_pass"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_user" />


    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_user"
        android:layout_alignRight="@+id/edit_user"
        android:layout_alignBottom="@+id/label_pass"
        android:hint="@string/login_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_user"
        app:layout_constraintTop_toTopOf="@+id/label_pass" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="155dp"
        android:layout_height="63dp"
        android:layout_below="@+id/edit_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:onClick="Login"
        android:text="@string/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

</androidx.constraintlayout.widget.ConstraintLayout>